// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs tests onSelect is called on tab title click 1`] = `
<styled.div>
  <styled.div>
    <styled.a
      key="0"
      onClick={[Function]}
      selected={true}
    />
    <styled.a
      key="1"
      onClick={[Function]}
      selected={false}
    />
    <styled.a
      key="2"
      onClick={[Function]}
      selected={false}
    />
  </styled.div>
  <styled.div
    key=".0"
    title="Title 1"
  >
    <div
      className="content-1"
    />
  </styled.div>
</styled.div>
`;

exports[`Tabs tests render item titles 1`] = `
<styled.div>
  <styled.div>
    <styled.a
      key="0"
      onClick={[Function]}
      selected={true}
    />
    <styled.a
      key="1"
      onClick={[Function]}
      selected={false}
    />
  </styled.div>
  <styled.div
    key=".0"
    title="First title"
  >
    First content
  </styled.div>
</styled.div>
`;

exports[`Tabs tests renders only selected tab content 1`] = `
<styled.div>
  <styled.div>
    <styled.a
      key="0"
      onClick={[Function]}
      selected={true}
    />
    <styled.a
      key="1"
      onClick={[Function]}
      selected={false}
    />
    <styled.a
      key="2"
      onClick={[Function]}
      selected={false}
    />
  </styled.div>
  <styled.div
    key=".0"
    title="Title 1"
  >
    <div
      className="content-1"
    />
  </styled.div>
</styled.div>
`;

exports[`Tabs tests renders only selected tab content 2`] = `
<styled.div>
  <styled.div>
    <styled.a
      key="0"
      onClick={[Function]}
      selected={false}
    />
    <styled.a
      key="1"
      onClick={[Function]}
      selected={true}
    />
    <styled.a
      key="2"
      onClick={[Function]}
      selected={false}
    />
  </styled.div>
  <styled.div
    key=".1"
    title="Title 2"
  >
    <div
      className="content-2"
    />
  </styled.div>
</styled.div>
`;

exports[`Tabs tests renders only selected tab content 3`] = `
<styled.div>
  <styled.div>
    <styled.a
      key="0"
      onClick={[Function]}
      selected={false}
    />
    <styled.a
      key="1"
      onClick={[Function]}
      selected={false}
    />
    <styled.a
      key="2"
      onClick={[Function]}
      selected={true}
    />
  </styled.div>
  <styled.div
    key=".2"
    title="Title 3"
  >
    <div
      className="content-3"
    />
  </styled.div>
</styled.div>
`;
